--- a/atomic-docs/scss/molecules/_header.scss
+++ b/atomic-docs/scss/molecules/_header.scss
@@ -31,7 +31,7 @@
 
 	#logo {
 		font-size: $header-type;
-		line-height: 1;
+		font-family: $extra-font;
 		span {
 			font-family: $headline-font;
 			font-size: 1.2rem;
