--- a/atomic-docs/scss/molecules/_usp.scss
+++ b/atomic-docs/scss/molecules/_usp.scss
@@ -9,7 +9,7 @@
     @include fluid-type(padding-bottom, $bp-xs, $bp-xxxlg, $size4, $size8);
     img{
       width: 90%;
-      @media only screen and (max-width: $bp-lg) {
+      @media only screen and (max-width: $bp-lg-max) {
     		width: 35%;
         display: block;
         margin-left: auto;
@@ -17,12 +17,16 @@
       }
     }
     h6{
-      @include fluid-type(font-size, $bp-xs, $bp-xxxlg, $size2, $size4);
+      @include fluid-type(font-size, $bp-xs, $bp-xxlg, $size2, $size4);
+      font-weight: $regular;
   		line-height: 1.2;
   		text-align: left;
-      @media only screen and (max-width: $bp-lg) {
+      @media only screen and (max-width: $bp-lg-max) {
     		text-align: center;
         margin-bottom: 10%;
+      }
+      @media only screen and (mid-width: $bp-md) {
+        margin-top: 0.4rem;
       }
   	}
     button{
