--- a/atomic-docs/scss/utilities/_variables.scss
+++ b/atomic-docs/scss/utilities/_variables.scss
@@ -19,6 +19,8 @@
 	$bp-xxlg: 120rem; // 120 * 16 = 1920px
 	$bp-xxxlg: 160rem; // 160 * 16 = 2560px
 
+	$bp-lg-max: 74.9375rem;
+
 	//for MARGINS
 	$headline-bottom: 5rem; //5*16= 80px
 
